<?xml version="1.0"?>
<package format="3">
  <name>tomo_msgs</name>
  <version>0.0.1</version>
  <description>Custom messages for Tomo tractor control system</description>

  <maintainer email="luka@example.com">luka</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Message generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Used in .msg -->
  <depend>builtin_interfaces</depend>

  <!-- REQUIRED FOR INTERFACE PACKAGES -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
